Bug 281870 - GpsInfo plugin shouldn't be visible by default
Summary: GpsInfo plugin shouldn't be visible by default
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 1.3 (KDE 4.8)
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-12 11:54 UTC by Bernhard Beschow
Modified: 2011-09-12 21:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Beschow 2011-09-12 11:54:25 UTC
Version:           unspecified (using KDE 4.7.1) 
OS:                Linux

The GPS info plugin displays data which is primarily of interest for developers or sophisticated users of Marble. However, Marble's mission is to provide a simple UI also for average users, so the plugin probably shouldn't be visible by default.

Reproducible: Didn't try

Steps to Reproduce:
Start Marble with default config settings.

Actual Results:  
The GPS info float item is visible.

Expected Results:  
The GPS info float item is hidden.
Comment 1 Thibaut Gridel 2011-09-12 21:18:50 UTC
Git commit b5314036c19617dbf6e64b31de2a9bf340e53027 by Thibaut Gridel.
Committed on 12/09/2011 at 23:17.
Pushed by tgridel into branch 'master'.

GpsInfo: not visible by default

BUG: 281870

M  +1    -0    src/plugins/render/gpsinfo/GpsInfo.cpp
M  +1    -1    src/plugins/render/gpsinfo/GpsInfo.h

http://commits.kde.org/marble/b5314036c19617dbf6e64b31de2a9bf340e53027