GpsInfo: not visible by default

BUG: 281870